--- a/css/estilo.css
+++ b/css/estilo.css
@@ -54,7 +54,7 @@ header {
 }
 
 #banner {
-  background-image: url('images/back.png');
+  background-image: url('.../images/back.png');
   width: 100%;
   height: 100vh;
   background-repeat: no-repeat;
